Fix footer alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ footer {
     padding-top: 10px;
     text-align: center;
     display: flex;
-    width: 100%;
+    width: 98%;
     height: 25px;
 
     justify-content: space-between;
